tests/slp27_const_float_to_f32_precision_bad.sl
// Verifies SLP 27 const float to f32 precision is rejected.
fn main() {
	var x f32 = 0.1
	_ = x
}
